tetrate/tls-restrictions-tls1.2-fips-ciphers/e2e/good-resouce.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fips-compliant-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        credentialName: my-tls-secret
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_2
        cipherSuites:
          - ECDHE-ECDSA-AES128-GCM-SHA256
          - ECDHE-RSA-AES128-GCM-SHA256
          - ECDHE-ECDSA-AES256-GCM-SHA384
          - ECDHE-RSA-AES256-GCM-SHA384
